refactor : 리펙토링
- Oauth 추상화
- Oauth 추상화에 따른 코드 리펙토링